tests/rosetta/out/Zig/ackermann-function-2.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenackermann-function-2660122741/001/prog.zig:48:5: error: redeclaration of 'main'
/tmp/TestMochiZigGoldenackermann-function-2660122741/001/prog.zig:41:1: note: other declaration here
